Scoreboards/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
for details on configuring this project to bundle and minify static web assets. */
body {
    color: #909090;
    font-family: "Lato",sans-serif;
    padding-top: 48px;
    font-style: normal;
    font-weight: 400;
    background-color: #f3f3f3;
    line-height: 1.7;
    font-size: 16px;
}
home-page, user-page, game-page > h3, label {
    color: #fff;
}
.body-content {
    padding: 0;
    margin: 0;
}

tbody > tr:hover {
    background-color: rgba(39, 39, 39, 0.8);
    cursor: pointer;
}

/* NAVBAR CUSTOM COLORING */
.navbar-inverse, .navbar-collapse, .collapse {
    background-color: #000;
}

.navbar, .navbar-inverse, .navbar-fixed-top {
    background-color: #000;
}

.nav, .navbar-nav, .navbar-right, .navbar-header {
    height: 68px;
    background-color: #000;
}

.navbar-header {
    padding: 7px 0;
}

.navbar-inverse .navbar-nav > li > a, button {
    font-family: inherit;
    font-style: normal;
    font-weight: 200;
    line-height: 1;
    text-transform: uppercase;
    color: hsl(0,0%,100%);
    padding: 25px 15px;
}

.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
    color: #e4ac25;
    border-bottom: 3px solid #e4ac25;
}

.navbar-brand {
    padding-top: 0;
    padding-bottom: 0;
}

/* LOGO */
.instillery-logo-navbar {
    width: 7em;
}

/* USER PROFILE PAGE*/
.profile-picture img {
    height: 300px;
}

.profile-grid-container {
    margin: 5%;
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
    grid-gap: 1rem;
    justify-content: flex-start;
}

.item-picture {
    grid-area: 1 / 1 / 3 / 2;
}

.item-personal-info {
    grid-area: 3 / 1 / 6 / 2;
}

.item-stats {
    grid-area: 1 / 2 / 3 / 3;
}

.item-matches {
    grid-area: 3 / 2 / 6 / 3;
    padding-top: 0;
    padding-bottom: 0;
    width: auto;
    height: 400px;
    overflow-y: auto;
}
    .item-matches > tr, th {
        position: sticky;
        top: 0;
        background-color: #000;
        padding-top: 20px !important;
    }
/* Style the tab */
.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
}

/* Style the buttons that are used to open the tab content */
.tab {
    background-color: #000;
}
.tab button {
    background-color: #000;
    color: #909090;
    font-weight:bold;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
}

/* Change background color of buttons on hover */
    .tab button:hover {
        background-color: #ddd;
        color: #909090;
    }

/* Create an active/current tablink class */
.tab button.active {
    background-color: #ccc;
}

/* Style the tab content */
.tabcontent {
    display: none;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
}

/* STYLE FOR THE CARD FORMAT ON USER AND GAME SEARCH*/
.user-cards{
    margin:20px;
    display:grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    grid-auto-rows:minmax(100px, auto);
    grid-gap: 1rem;
}

.card {
    border: 2px solid #e7e7e7;
    border-radius: 4px;
    padding: .5rem;
    -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    align-items: center;
    color: #fff;
    cursor: pointer;
    font-weight: bold;
}

.user-card-picture img {
    fill: #c7c4c4;
    height: 135px;
    padding: 1.5rem;
}

/* SEARCH SIZES*/
.usr-search-bar {
    width: 400px;
}

.usr-search-btn {
    width: 50px;
}

/* COMMON FOR ALL PAGES */
.page-content {
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 600px;
    padding: 15px;
}

/*HOME PAGE*/
.home-page, .game-page, .user-page {
    color: #fff;
    background-image: url(/images/banner-home.jpg);
    padding: 15px 30px;
}

.float-left1, .float-right1 {
    padding: 10px 0 10px 15px;
}

.display-next-to-each-other {
    margin-top: 5px;
}

.float-left1 > h3 {
    margin: 0;
    padding: 0;
}

/*LOGIN PAGE*/
.login-page {
    background-image: url(/images/contact-banner.jpg);
}

/*REGISTER PAGE*/
.register-page {
    background-image: url(/images/contact-banner.jpg);
}

/* NEW USER GAME PAGE*/
.new-user-game {
    background-image: url(/images/shutterstock_217325476.jpg);
}

#GamePlayedName {
    width: 50%;
}

#GameScore {
    width: 50%;
}

#submitUserGameBtn {
    color: #a6a6a6;
}

#submitUserGameBtn:hover {
    color: #262626;
}

/* CONTACT AND ABOUT PAGE */
.company-info {
    padding: 15px;
}

/* FOOTER */
.footer-partial {
    padding-top: 30px;
    background-color: #000;
    text-align: center;
}

.footer-row {
    margin-right: 15px !important;
    margin-left: 15px !important;
}

.social-media-row {
    padding: 10px 0;
}

.footer-row > p {
    font-size: 0.75em;
    margin: 0;
    padding-bottom: 20px;
}

.social-media-footer-bar {
    display: inline-flex;
}

.social-media-footer-bar > li {
    padding: 0 1em 0 1em;
    margin: 0 10px 0 10px;
    width: 3em;
    height: 3em;
    border-radius: 50%;
    background-color: #fff;
}

.social-media-footer-bar > li:hover {
    cursor: pointer;
}

.social-media-element > i {
    font-size: 1.3em;
    padding-top: .6em;
}

.social-media-element {
    text-align: center;
}

.float-left1, .float-right1 {
    padding: 10px 0 10px 15px;
}
.float-right1 {
    float: right;
    overflow: auto;
}
.game-detail {
    position: fixed;
    left: 0;
    overflow: visible;
}

.row .display-next-to-each-other {
    margin-top: 5px;
}

.float-left1 > h3 {
    margin: 0;
    padding: 0;
}

/* game/user page card css */
.card-picture {
    height: 135px;
    background-color: #5d5e5e;
}
.game-card-detail {
    color: white;
}

/* GAME DETAIL PAGE*/
.game-detail-table-div {
    padding-top: 0;
    padding-bottom: 0;
    height: 400px;
    overflow-y: auto;
}
.game-profile-table-div {
    padding-top: 0;
    padding-bottom: 0;
    width:auto;
    height: 300px;
    overflow-y: auto;
}
.game-detail-thead > tr, th {
    position: sticky;
    top: 0;
    padding-top: 20px !important;
}

